--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,204 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.hidden{
+    visibility: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+    --rifle-green: #3e503cff;
+    --artichoke: #949c81ff;
+    --eggshell: #f0e6d1ff;
+    --dark-salmon: #ee9c81ff;
+    --apricot: #efc1a9ff;
+    --peach-puff:#ffdab9;
+    --kawai-red:rgb(246, 86, 86)
+}
+
+body,html{
+    margin: 0;
+    padding: 0;
+    background-color: var(--eggshell);
+    height: 100%;
+    width: 100%;
+    font-family: quicksand;
+}
+#root{
+    height: 100%;
+}
+.App{
+    display: flex;
+    flex-direction: row;
+    justify-content:center ;
+    align-items: center;
+    height: 100%;
+}
+.MainContentSignin{
+    background-color: var(--apricot);
+    padding:8px;
+    border-radius: 8px;
+    box-shadow: 1px 1px 3px rgb(58, 58, 58);
+}
+.SigninHeader p{
+    font-family: montserrat;
+    padding:0px;
+    margin-top:-8px;
+    font-weight: 550;
+}
+.TypesOfInput{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.inputDivSignin{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.inputContent{
+    width: 100%;
+    border: none;
+    border-radius: 12px;
+    margin:4px;
+    padding:4px;
+    font-family: quicksand;
+    font-size: medium;
+    box-shadow: 1px 1px 2px rgb(85, 85, 85);
+    display: flex;
+    align-items: center;
+}
+.authButton{
+    background-color: var(--rifle-green);
+    width: fit-content;
+    padding: 3px;
+    border-radius: 8px;
+    color: var(--eggshell);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.highLightContent{
+    color:var(--rifle-green);
+    text-decoration: none;
+}
+.SwapDiv a{
+    text-decoration: none;
+}
+.loggedinPage{
+    height: 100%;
+    width: 100%;
+}
+.titlePage{
+    padding: 0px;
+    margin: 0px;
+}
+.headerList{
+    background-color: var(--artichoke);
+    padding:24px 12px;
+    font-size: xx-large;
+    font-weight: 500;
+}
+.accountsList{
+    padding: 12px;
+}
+.AccountTitle{
+    font-family: montserrat;
+    font-size: large;
+    font-weight: 600;
+}
+.listOfAllYourAccounts{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.displayCard{
+    background-color: var(--apricot);
+    padding:8px;
+    border-radius: 8px;
+    box-shadow: 1px 1px 3px rgb(58, 58, 58);
+    width: 20vw;
+    height: fit-content;
+}
+.ButtonListForStuff{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.popUpStuff{
+    position: absolute;
+    top: 50%; right: 50%;
+    transform: translate(50%,-50%);
+    background-color: var(--peach-puff);
+    padding:8px 16px;
+    border-radius: 8px;
+    width: 25vh;
+}
+.EnterStuff{
+    font-weight: 500;
+}
+.inputStuff{
+    border: none;
+    border-radius: 4px;
+    margin:4px;
+    padding: 4px;
+    font-family: quicksand;
+    font-size: medium;
+    box-shadow: 1px 1px 2px rgb(85, 85, 85);
+    display: flex;
+    align-items: center;
+}
+.SubmitButton{
+    outline: none;
+    border: none;
+    background-color: var(--rifle-green);
+    color:var(--eggshell);
+    border: 1px solid --rifle-green;
+    padding:4px;
+    border-radius: 8px;
+    font-size: medium;
+    font-weight: 400;
+    font-family: quicksand;
+}
+.CancelButton{
+    outline: none;
+    border: none;
+    background-color: var(--kawai-red);
+    color:var(--eggshell);
+    border: 1px solid --rifle-green;
+    padding:4px;
+    border-radius: 8px;
+    font-size: medium;
+    font-weight: 400;
+    font-family: quicksand;
+}
+.GeneralButton{
+    outline: none;
+    border: none;
+    background-color: var(--artichoke);
+    color:var(--eggshell);
+    border: 1px solid --rifle-green;
+    padding:4px;
+    border-radius: 8px;
+    font-size: medium;
+    font-weight: 400;
+    font-family: quicksand;   
+}
+.makeAnAccountButton{
+    display: flex;
+    flex-direction: row;
+}
+.makeAnAccountButtonText{
+    outline: none;
+    border: none;
+    background-color: var(--rifle-green);
+    color:var(--eggshell);
+    border: 1px solid --rifle-green;
+    padding:4px;
+    border-radius: 8px;
+    font-size: medium;
+    font-weight: 400;
+    font-family: quicksand;  
+    
 }
